# OpenCrystalCaves

./: .clang-format  .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  cmake.sh  occ.webm
.github/workflows/: cpp.yml  cpp.yml.cmake
media/: items.json  level1.json  mainlevel.json
media/CC1/: CC1-1.SND  CC1-2.SND  CC1-3.SND  CC1-F1.MNI  CC1-F2.MNI  CC1-SPL.MNI  CC1.APG  CC1.CDT  CC1.CFG  CC1.END  CC1.GFX  CC1.TTL  file_id.diz
occ/: CMakeLists.txt
occ/char_viewer/: CMakeLists.txt  char_viewer.cc
occ/font_viewer/: CMakeLists.txt  font_viewer.cc
occ/game/: CMakeLists.txt
occ/game/export/: actor.h  background.h  enemy.h  entrance.h  exit.h  game.h  hazard.h  input.h  item.h  level.h  level_id.h  object.h  player.h  player_input.h  sprite.h  tile.h
occ/game/src/: actor.cc  background.cc  enemy.cc  entrance.cc  exit.cc  explosion.cc  explosion.h  game.cc  game_impl.cc  game_impl.h  hazard.cc  item.cc  item_loader.cc  item_loader.h  level.cc  level.h  level_base.cc  level_base.h  level_impl.cc  level_impl.h  level_loader.cc  level_loader.h  level_mainlevel.cc  level_mainlevel.h  level_one.cc  level_one.h  missile.cc  missile.h  moving_platform.cc  moving_platform.h  object_manager.cc  object_manager.h  particle.cc  particle.h  player.cc  tile.cc
occ/gfx/: CMakeLists.txt
occ/gfx/src/: line.cc  text.cc
occ/image_viewer/: CMakeLists.txt  image_viewer.cc
occ/io/: CMakeLists.txt
occ/io/export/: item_loader.h  level_loader.h
occ/io/src/: item_loader.cc  level_loader.cc
occ/level_viewer/: CMakeLists.txt  level_viewer.cc
occ/occ/: CMakeLists.txt
occ/occ/src/: config.h  constants.h  game.cc  game.h  game_renderer.cc  game_renderer.h  imagemgr.cc  imagemgr.h  input.h  occ.cc  panel.cc  panel.h  spritemgr.cc  spritemgr.h  state.cc  state.h  utils.cc  utils.h  wchars.h
occ/panel_test/: CMakeLists.txt  panel_test.cc
occ/sdl_wrapper/: CMakeLists.txt
occ/sdl_wrapper/export/: draw.h  event.h  graphics.h  line.h  sdl_wrapper.h
occ/sdl_wrapper/src/: event_impl.cc  graphics_impl.cc  graphics_impl.h  line.cc  sdl_wrapper_impl.cc  sdl_wrapper_impl.h
occ/sdl_wrapper/test/src/: event_test.cc  graphics_test.cc  sdl_wrapper_test.cc
occ/sdl_wrapper/test/src/stubs/: sdl_stub.cc  sdl_stub.h
occ/sg_engine/: CMakeLists.txt
occ/sg_engine/export/: sg_engine.h
occ/sg_engine/src/: event_impl.h  graphics_impl.cc  graphics_impl.h  sg_engine_impl.cc  sg_engine_impl.h
occ/sg_engine/test/src/: event_test.cc
occ/sg_engine/test/src/stubs/: sdl_stub.h
occ/sge/: CMakeLists.txt
occ/sge/export/: graphics.h  input.h
occ/sge/src/: sge_impl.cc  sge_impl.h
occ/sge/test/src/: graphics_test.cc
occ/sge/test/src/stubs/: sdl_stub.cc
occ/sge_utils/: CMakeLists.txt
occ/sge_utils/export/: geometry.h  logger.h  misc.h
occ/sge_utils/src/: logger.cc
occ/sge_utils/test/src/: geometry_test.cc
occ/sge_utils/test/stubs/: logger_stub.cc
occ/sound_player/: CMakeLists.txt  sound_player.cc
occ/sprite_to_emoji/: CMakeLists.txt  sprite_to_emoji.cc
occ/sprite_viewer/: CMakeLists.txt  sprite_viewer.cc
occ/src/: draw.h  game.cc  game.h  geometry.cc  geometry.h  input.h  item.h  level.cc  level.h  level_loader.cc  math.h  menu.cc  menu.h  object.h  occ.cc  spritemgr.cc  spritemgr.h
occ/src/draw/: line.cc  text.cc  text.h
occ/tileset_reader/: CMakeLists.txt  tileset_reader.cc
occ/ui_test/: CMakeLists.txt  ui_test.cc
occ/utils/: CMakeLists.txt
occ/utils/export/: exe_data.h  geometry.h  logger.h  misc.h  occ_math.h  path.h  sprite.h  vector.h
occ/utils/src/: exe_data.cc  geometry.cc  logger.cc  misc.cc  path.cc
occ/utils/test/src/: misc_test.cc  occ_math_test.cc  utils_test.cc  vector_test.cc
tools/: build_debug.sh  cmake.sh  sprite-extractor.py  travis.sh
utils/: sprite-extractor.py
